--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  web_socket_channel: ^3.0.0
   flutter_riverpod: ^2.5.1  # ← добавь эту строку
   vector_math: ^2.1.4
   # The following adds the Cupertino Icons font to your application.
